# infomedicament-dataeng

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data_sources/: has.yml
infra_s3/: policy.json
scripts/: explore_opensearch_sections.py  import_datapackage.py  search_notice_chunks.py
sql/: import_atc.sql  import_presentations.sql
src/infomedicament_dataeng/: cli.py  config.py  datagouv.py  db.py  opensearch_etl.py  parser.py  pediatric.py  pediatric_config.py  s3.py  sql_to_csv.py
src/infomedicament_dataeng/convert/: __init__.py  sql_to_csv.py
src/infomedicament_dataeng/datagouv/: __init__.py  importer.py
src/infomedicament_dataeng/opensearch/: __init__.py  client.py  notice_chunks.py  sections.py  specialites.py
src/infomedicament_dataeng/parsing/: __init__.py
src/infomedicament_dataeng/pediatric/: __init__.py  llm.py  pediatric.py
tests/: conftest.py  test_datagouv.py  test_db_import.py  test_notice_chunks.py  test_opensearch_etl.py  test_parser.py  test_pediatric.py  test_sql_to_csv.py
tests/fixtures/: test_datagouv.yml
